crates/omega_app/src/snapshots/omega_app__operation__tests__fs_search_with_results.snap
---
source: crates/omega_app/src/operation.rs
expression: to_value(actual)
---
<search_results
  path="/home/user/project"
  max_bytes_allowed="256000"
  total_lines="2"
  display_lines="1-2"
  pattern="Hello"
  glob="*.txt"
><![CDATA[file1.txt:1:Hello world
file2.txt:3:Hello universe]]>
</search_results>
