crates/omega_app/src/snapshots/omega_app__operation__tests__fs_undo_file_removed.snap
---
source: crates/omega_app/src/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/deleted_file.txt"
  status="removed"
  total_lines="3"
><![CDATA[Original file content
That was deleted
During undo]]>
</file_undo>
