crates/omega_app/src/snapshots/omega_app__operation__tests__fs_undo_success.snap
---
source: crates/omega_app/src/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/test.txt"
  status="restored"
><![CDATA[1   |-ABC
  1 |+PQR
]]>
</file_undo>
